fixed footer and aligned most articles

--- a/ibeer_starter_files/main.css
+++ b/ibeer_starter_files/main.css
@@ -48,6 +48,8 @@ img {
     flex-wrap: wrap;
     justify-content: center;
     flex-shrink: 1;
+    margin: auto;
+    padding-bottom: 50px;
 }
 
 #site-header {
@@ -96,6 +98,7 @@ img {
         - Use Flexbox to arrange the navigation links
     */
     display: flex;
+    justify-content: space-between;
 }
 
 #main-navigation a {
@@ -128,7 +131,7 @@ main {
         - Flexbox: Set the starting width of this element
         - Use relative positioning to bump this upward
     */
-    width: 75%;
+    width: 70%;
 }
 
 aside {
@@ -140,7 +143,7 @@ aside {
         - Flexbox: Set the starting width of this element
         - Use relative positioning to bump this upward
     */
-    width: 15%;
+    width: 20%;
 }
 
 aside h3 {
@@ -187,6 +190,10 @@ article img {
         - Float article images to the right
         and match sizes and spacing to the mockup
     */
+    float: right;
+    width: 50%;
+    height: 50%;
+    padding: 0;
 }
 
 article footer p {
@@ -203,4 +210,9 @@ article footer p {
         TODO: 
         - Style the site footer
     */
+    color: white;
+    text-align: center;
+    height: 50px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
